# simpleP2P

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: golang.cmake
examples/: chat.capi.cpp  chat.cpp
src/: delegate.hpp  libp2p.go  main.cpp  main.go  networking.go  simplep2p.c  simplep2p.h  simplep2p.hpp
